--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "main": "./main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "package": "electron-packager ./ xDict --platform=win32 --arch=x64 --version=0.34.3  --out=out/ --overwrite"
   },
   "devDependencies": {
     "electron-prebuilt": "^0.34.3"
